Fixed Overflows

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 @import 'src/styles.scss';
 
 :host {
+    overflow-x: hidden;
     @include flex-col-center();
     .app-divider { 
         margin: 10px;
@@ -12,12 +13,15 @@
         $header-height: 150px;
         $footer-height: 40px;
         .header {
-            @include flex-row-center();
+            @include flex-col-center();
             gap: 5px;
             padding: 15px;
             p {
                 font-weight: bold;
                 font-size: 24px;
+            }
+            app-display-plate { 
+                min-width: 360px;
             }
         }
         .body {
@@ -31,8 +35,8 @@
                 height: 100%;
             }
         }
-        .footer {
-            height: calc($footer-height - 2px);
-        }
+        // .footer {
+        //     height: calc($footer-height - 2px);
+        // }
     }
 }
